[project]
name = "hnh"
version = "0.3.0"
description = "Hotdog not Hotdog"
authors = [
    {name = "Seokxkyu", email = "kyuseok000@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "transformers>=4.45.0",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "python-multipart>=0.0.10",
]
requires-python = ">3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.3",
]
[tool.pytest.ini_options]
pythonpath = "src"
